Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - run:
-          command: sudo pip install -r requirement.txt
+          command: pip install -r requirement.txt
       - run:
           command: coverage run manage.py test
       
