Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
           command: pip install -r requirement.txt
       - run:
           command: coverage run manage.py test
+      - run:
+          command: npm install
       
 
 
