--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,14 @@ jobs:
           command: coverage run manage.py test
       - run:
           command: npm install
+
+    {
+      "scripts": {
+        "start": "my-server -p 3030",
+        "cy:run": "cypress run",
+        "test": "start-server-and-test start http://localhost:3030 cy:run"
+      }
+    }
       
 
 
