--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
           command: coverage run manage.py test
       - run:
           command: npm install
+      - run:
+          command: python manage.py runserver 8000
 
 
 
