Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,12 @@ jobs:
           command: pip install -r requirement.txt
       - run:
           command: coverage run manage.py test
+#      - run:
+#          command: npm install
       - run:
-          command: npm install
-
+          command: python manage.py migrate
       - run:
-          command: manage.py runserver 8000
+          command: python manage.py runserver 8000
 
 
 
