Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           command: npm install
       - run:
-          command: WHICH PYTHON && python --version
+          command: python --version
 
 
 
