Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2
 jobs:
   build:
     docker:
-      - image: alpine-python3-nodejs
+      - image: labhackercd/alpine-python3-nodejs
+
 
     steps:
       - checkout
