--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
           command: pip install -r requirement.txt
       - run:
           command: coverage run manage.py test
-#      - run:
-#          command: npm install
+      - run:
+          command: pip install Pillow
 
 
 
