--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
       - run:
           command: npm install
       - run:
+          command: python manage.py migrate
+      - run:
           command: python manage.py runserver 8000
 
 
