--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           command: npm install
       - run:
-          command: python manage.py migrate
+          command: python manage.py makemigrations && python manage.py migrate
       - run:
           command: python manage.py runserver 8000
 
