Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
           command: python manage.py makemigrations && python manage.py migrate
       - run:
           command: python manage.py runserver 8000
+      - run:
+          command: node_modules/.bin/cypress open
 
 
 
