Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
           background: true
       - run:
           command: pip install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+      - run:
+          command: pip install xvfb
 
       - run:
           command: node_modules/.bin/cypress open
