Cypress forms tests added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
       - run:
           command: pip install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
       - run:
-          command: pip install xvfbwrapper
+          command: pip install xorg-x11-server-Xvfb
+
 
       - run:
           command: node_modules/.bin/cypress open
