--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run:
-          command: apt update && apt install xvfb -y
+          command: apt update && apt install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 -y
       - run:
           command: pip install -r requirement.txt
       - run:
