Cypress errors removed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,11 @@ jobs:
           command: npm install
       - run:
           command: python manage.py makemigrations && python manage.py migrate
-#      - run:
-#          command: python manage.py runserver 0.0.0.0:8000
-#          background: true
-#      - run:
-#          command: node_modules/.bin/cypress run
+      - run:
+          command: python manage.py runserver 0.0.0.0:8000
+          background: true
+      - run:
+          command: node_modules/.bin/cypress run
 
 
 
