Cypress errors removed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
       - run:
           command: python manage.py runserver 0.0.0.0:8000
           background: true
-#      - run:
-#          command: node_modules/.bin/cypress run
+      - run:
+          command: node_modules/.bin/cypress run
 
 
 
